--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ django-cors-headers = "*"
 djangorestframework-camel-case = "*"
 pyjwt = "==2.1.0"
 django-environ = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [dev-packages]
 
